Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -68,5 +68,6 @@ steps:
 # -----------------------------
 - task: AzureWebApp@1
   inputs:
+    azureSubscription: 'FreeAzureConn'
     appName: 'AzureDemoApp'  # <-- Replace this!
     package: '$(System.ArtifactsDirectory)/warfile/**/*.war'
