Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -6,15 +6,37 @@ pool: AzureDemoServer
 steps:
 
 # -----------------------------
-# 0. Diagnose Chrome + ChromeDriver
+# 0. Install Chrome + ChromeDriver (NEW STEP)
 # -----------------------------
 - script: |
-    echo "=== Diagnosing Chrome and ChromeDriver ==="
-    which google-chrome && google-chrome --version || echo "google-chrome not found"
-    which chromium-browser && chromium-browser --version || echo "chromium-browser not found"
-    which chromedriver && chromedriver --version || echo "chromedriver not found"
-    echo "=========================================="
-  displayName: 'Diagnose Chrome & ChromeDriver'
+    echo "Installing latest Chrome and ChromeDriver..."
+
+    sudo apt-get update -y
+    sudo apt-get install -y wget curl unzip gnupg2 jq
+
+    # Install Google Chrome Stable
+    wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+    sudo apt-get update -y
+    sudo apt-get install -y google-chrome-stable
+
+    # Get Chrome version
+    CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+    echo "Installed Chrome version: $CHROME_VERSION"
+
+    # Get matching ChromeDriver
+    DRIVER_URL=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" \
+      | jq -r --arg ver "$CHROME_VERSION" '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64") | .url')
+
+    echo "Downloading ChromeDriver from: $DRIVER_URL"
+    wget "$DRIVER_URL" -O chromedriver.zip
+    unzip chromedriver.zip
+    sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+    sudo chmod +x /usr/local/bin/chromedriver
+
+    echo "Installed ChromeDriver version:"
+    chromedriver --version
+  displayName: 'Install Chrome + ChromeDriver'
 
 # -----------------------------
 # 1. Build with Maven
