--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -5,7 +5,7 @@ pool: AzureDemoServer
 
 steps:
 # -----------------------------
-# 1. Build with Maven
+# 1. Build with Maven (Java 11)
 # -----------------------------
 - task: Maven@4
   inputs:
@@ -19,7 +19,7 @@ steps:
     goals: 'clean install'
 
 # -----------------------------
-# 2. Copy .war to staging
+# 2. Copy WAR files to staging
 # -----------------------------
 - task: CopyFiles@2
   inputs:
@@ -27,7 +27,7 @@ steps:
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 # -----------------------------
-# 3. Publish build artifact
+# 3. Publish build artifacts
 # -----------------------------
 - task: PublishBuildArtifacts@1
   inputs:
@@ -36,7 +36,7 @@ steps:
     publishLocation: 'Container'
 
 # -----------------------------
-# 4. Docker login
+# 4. Docker login to Docker Hub
 # -----------------------------
 - task: Docker@2
   inputs:
@@ -44,14 +44,15 @@ steps:
     command: 'login'
 
 # -----------------------------
-# 5. Build & Push Docker image
+# 5. Build and push Docker image (using updated Dockerfile name)
 # -----------------------------
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerHubCon'
     repository: 'tmag84/demoazuredevops'
     command: 'buildAndPush'
-    Dockerfile: '**/AzureDockerfile'
+    Dockerfile: '**/azp-agent-linux.dockerfile'  # updated file name
+    tags: 'latest'  # optionally specify tags
 
 # -----------------------------
 # 6. Download artifact before deploy
